Make layout friendly on big screens

--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
     </style>
   </head>
   <body class="font-mono text-gray-900">
-    <form class="fixed w-full h-12 top-0 bg-gray-200 shadow flex
-                 justify-between p-2 items-center z-10">
-      <a
-        class="text-xs text-gray-600 underline cursor-pointer"
-        href="https://github.com/staab/esv"
-        target="_blank">
-        About
-      </a>
-      <div class="flex justify-center items-center">
-        <img src="/search.svg" class="h-4 -mr-6 z-10 opacity-50" />
-        <input name="q" class="rounded p-2 pl-8 h-8" type="text" />
+    <form class="fixed w-full top-0 bg-gray-200 shadow z-10">
+      <div class="max-w-2xl m-auto flex justify-between items-center h-12 p-2">
+        <a
+          class="text-xs text-gray-600 underline cursor-pointer"
+          href="https://github.com/staab/esv"
+          target="_blank">
+          About
+        </a>
+        <div class="flex justify-center items-center">
+          <img src="/search.svg" class="h-4 -mr-6 z-10 opacity-50" />
+          <input name="q" class="rounded p-2 pl-8 h-8" type="text" />
+        </div>
       </div>
     </form>
     <ul
@@ -81,7 +82,7 @@
       class="hidden fixed right-0 -mr-1 pt-16 bg-white border
              border-gray-200 w-64 max-h-full shadow">
     </ul>
-    <div class="p-2 pt-16">
+    <div class="p-2 pt-16 m-auto max-w-2xl">
       <p class="our-copyright -mt-5 text-gray-400 text-xs text-center hidden">
         Copyright
         <a
