--- a/index.html
+++ b/index.html
@@ -63,20 +63,22 @@
     </style>
   </head>
   <body class="font-mono text-gray-900">
-    <form class="fixed w-full top-0 bg-gray-200 shadow z-10">
-      <div class="max-w-2xl m-auto flex justify-between items-center h-12 p-2">
-        <a
-          class="text-xs text-gray-600 underline cursor-pointer"
-          href="https://github.com/staab/esv"
-          target="_blank">
-          About
-        </a>
-        <div class="flex justify-center items-center">
-          <img src="/search.svg" class="h-4 -mr-6 z-10 opacity-50" />
-          <input name="q" class="rounded p-2 pl-8 h-8" type="text" />
+    <div class="absolute">
+      <form class="fixed w-full top-0 bg-gray-200 shadow z-10">
+        <div class="max-w-2xl m-auto flex justify-between items-center h-12 p-2">
+          <a
+            class="text-xs text-gray-600 underline cursor-pointer"
+            href="https://github.com/staab/esv"
+            target="_blank">
+            About
+          </a>
+          <div class="flex justify-center items-center">
+            <img src="/search.svg" class="h-4 -mr-6 z-10 opacity-50" />
+            <input name="q" class="rounded p-2 pl-8 h-8" type="text" />
+          </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
     <ul
       id="suggestions"
       class="hidden fixed right-0 -mr-1 pt-16 bg-white border
@@ -127,7 +129,7 @@
         {shouldSort: true, keys: ['book']}
       )
 
-      search('John 1', {initial: true})
+      search(localStorage.getItem('q') || 'John 1', {initial: true})
 
       $('form').addEventListener('submit', evt => {
         evt.preventDefault()
@@ -241,6 +243,8 @@
         }
 
         searching = true
+
+        localStorage.setItem('q', q)
 
         const {canonical, passages, passage_meta, detail} = await fetchPassage(q)
 
