--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
       const $copyright = $('.our-copyright')
       const $suggestions = $('#suggestions')
       const books = {
-        'Genesis':	50, 'Exodus':	40, 'Leviticus':	27, 'Numbers':	36,
-        'Deuteronomy':	34, 'Joshua':	24, 'Judges':	21, 'Ruth':	4,
-        '1 Samuel':	31, '2 Samuel':	24, '1 Kings':	22, '2 Kings':	25,
-        '1 Chronicles':	29, '2 Chronicles':	36, 'Ezra':	10, 'Nehemiah':	13,
-        'Esther':	10, 'Job':	42, 'Psalms':	150, 'Proverbs':	31,
-        'Ecclesiastes':	12, 'Song of Solomon':	8, 'Isaiah':	66, 'Jeremiah':	52,
-        'Lamentations':	5, 'Ezekiel':	48, 'Daniel':	12, 'Hosea':	14,
-        'Joel':	3, 'Amos':	9, 'Obadiah':	1, 'Jonah':	4, 'Micah':	7,
-        'Nahum':	3, 'Habakkuk':	3, 'Zephaniah':	3, 'Haggai':	2,
-        'Zechariah':	14, 'Malachi':	4, 'Matthew':	28, 'Mark':	16,
-        'Luke':	24, 'John':	21, 'Acts':	28, 'Romans':	16, '1 Corinthians':	16,
-        '2 Corinthians':	13, 'Galatians':	6, 'Ephesians':	6, 'Philippians':	4,
-        'Colossians':	4, '1 Thessalonians':	5, '2 Thessalonians':	3,
-        '1 Timothy':	6, '2 Timothy':	4, 'Titus':	3, 'Philemon':	1,
-        'Hebrews':	13, 'James':	5, '1 Peter':	5, '2 Peter':	3, '1 John':	5,
-        '2 John':	1, '3 John':	1, 'Jude':	1, 'Revelation':	22,
+        'Genesis': 50, 'Exodus': 40, 'Leviticus': 27, 'Numbers': 36,
+        'Deuteronomy': 34, 'Joshua': 24, 'Judges': 21, 'Ruth': 4,
+        '1 Samuel': 31, '2 Samuel': 24, '1 Kings': 22, '2 Kings': 25,
+        '1 Chronicles': 29, '2 Chronicles': 36, 'Ezra': 10, 'Nehemiah': 13,
+        'Esther': 10, 'Job': 42, 'Psalms': 150, 'Proverbs': 31,
+        'Ecclesiastes': 12, 'Song of Solomon': 8, 'Isaiah': 66, 'Jeremiah': 52,
+        'Lamentations': 5, 'Ezekiel': 48, 'Daniel': 12, 'Hosea': 14,
+        'Joel': 3, 'Amos': 9, 'Obadiah': 1, 'Jonah': 4, 'Micah': 7,
+        'Nahum': 3, 'Habakkuk': 3, 'Zephaniah': 3, 'Haggai': 2,
+        'Zechariah': 14, 'Malachi': 4, 'Matthew': 28, 'Mark': 16,
+        'Luke': 24, 'John': 21, 'Acts': 28, 'Romans': 16, '1 Corinthians': 16,
+        '2 Corinthians': 13, 'Galatians': 6, 'Ephesians': 6, 'Philippians': 4,
+        'Colossians': 4, '1 Thessalonians': 5, '2 Thessalonians': 3,
+        '1 Timothy': 6, '2 Timothy': 4, 'Titus': 3, 'Philemon': 1,
+        'Hebrews': 13, 'James': 5, '1 Peter': 5, '2 Peter': 3, '1 John': 5,
+        '2 John': 1, '3 John': 1, 'Jude': 1, 'Revelation': 22,
       }
 
       let searching = false
@@ -130,7 +130,11 @@
         {shouldSort: true, keys: ['book']}
       )
 
-      const getQueryFromUrl = () => decodeURI(location.pathname.slice(1).replace(/\+/g, ' '))
+      const qFromUrl = () => decodeURI(location.pathname.slice(1).replace(/\+/g, ' '))
+
+      const getHeight = $el => $el ? $el.offsetHeight : 0
+
+      const getOffset = $el => $el ? $el.getBoundingClientRect().top : 0
 
       const isVisible = $el => {
         if (!$el) {
@@ -142,7 +146,17 @@
         return bottom > 0 && top <= innerHeight
       }
 
-      search(getQueryFromUrl() || localStorage.getItem('q') || 'John 1', {initial: true})
+      const debounce = (wait, f) => {
+        let timeout
+
+        return (...args) => {
+          clearTimeout(timeout)
+
+          timeout = setTimeout(() => f(...args), wait)
+        }
+      }
+
+      search(qFromUrl() || localStorage.getItem('q') || 'John 1', {initial: true})
 
       $('form').addEventListener('submit', evt => {
         evt.preventDefault()
@@ -158,7 +172,7 @@
         }
       })
 
-      window.addEventListener('scroll', evt => {
+      window.addEventListener('scroll', debounce(300, evt => {
         if (searching) {
           return
         }
@@ -194,10 +208,10 @@
         }
 
         prevScrollY = scrollY
-      })
+      }))
 
       window.addEventListener('popstate', evt => {
-        search(getQueryFromUrl())
+        search(qFromUrl())
       })
 
       $q.addEventListener('mousedown', evt => {
@@ -325,19 +339,15 @@
           }
 
           const oldScrollY = window.scrollY
-          const $oldPrev = $r.querySelector('.prev')
-          const oldPrevHeight = $oldPrev ? $oldPrev.offsetHeight : 0
+          const oldPrevHeight = getHeight($('.prev'))
 
           $r.innerHTML = contents
 
           postProcess()
 
-          const $prev = $r.querySelector('.prev')
-          const prevOffset = $prev ? $prev.offsetHeight : 0
-
           if (backward) {
             window.scrollTo({
-              top: oldScrollY + prevOffset + 7,
+              top: oldScrollY + getHeight($('.prev')) + 7,
             })
           } else if (forward) {
             window.scrollTo({
@@ -345,7 +355,7 @@
             })
           } else {
             window.scrollTo({
-              top: prevOffset + 24,
+              top: getOffset($('.cur')) - 48,
             })
           }
 
